# ces_customization

./: README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
ces_customization/: constants.py  hooks.py  install.py  modules.txt  uninstall.py
ces_customization/ces_customization/custom/: journal_entry.py
ces_customization/custom/: naming.py  sales.py  utils.py
ces_customization/fixtures/: bank.json  custom_field.json  customer.json  supplier.json  uom.json
ces_customization/overrides/: customer.py  journal_entry.py  payment_entry.py  supplier.py
ces_customization/public/js/: journal_entry.js  payment_entry.js  utils.js
ces_customization/setup/: constants.py  install.py  uninstall.py
ces_customization/setup/data/: doctype_global_default_value.json  doctype_naming_data.json  doctype_naming_default_value.json  gfmis_uom_conversion_data.json  gfmis_uom_data.json  naming_series_data_erpnext.json  naming_series_data_erpnext_thailand.json  naming_series_data_hrms.json
