[project]
name = "ces_customization"
authors = [
    { name = "Cloud Engineering and Services Co.,Ltd.", email = "cescoltdbkk@gmail.com"}
]
description = "Customization for Thailand"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# APT Dependencies
[deploy.dependencies.apt]
packages = [
    "libthai0",
    "fonts-tlwg-laksaman-otf"
]

[project.urls]
Homepage = "https://github.com/CESBKK/ces_customization"
Repository = "https://github.com/CESBKK/ces_customization.git"
"Bug Reports" = "https://github.com/CESBKK/ces_customization/issues"